[project]
name = "librewatt"
version = "0.1.0"
description = "Ui web basée sur streamlit permettant l'accès aux données à distance via authentification"
authors = [
    {name = "virgile",email = "virgile.dauge@pm.me"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "electriflux (>=0.1.10,<0.2.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "streamlit-authenticator (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
